# arfs_gen

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: deploy_pypi.yml  test.yml
arfs_gen/tests/: test_toydata.py
