[tool.poetry]
name = "arfs-gen"
version = "1.0.0"
description = "Library to generate toy data for machine learning experiments in the context of all-relevant feature selection."
authors = ["Lukas Pfannschmidt <lukas@lpfann.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
